--- a/src/styles/usage/core/common.scss
+++ b/src/styles/usage/core/common.scss
@@ -20,3 +20,7 @@ $base-color: #0dc441;
   font-family: yofont;
   src: url("/images/iconfont/iconfont3.woff") format("woff"), url("/images/iconfont/iconfont3.ttf") format("truetype");
 }
+@font-face {
+  font-family: yofont;
+  src: url("/images/iconfont/iconfont4.woff") format("woff"), url("/images/iconfont/iconfont4.ttf") format("truetype");
+}
