--- a/src/styles/usage/modules/fenlei.scss
+++ b/src/styles/usage/modules/fenlei.scss
@@ -34,7 +34,7 @@
         ul{
             height: 100%;
             width: .75rem;
-            background: #efefef;
+//          background: #efefef;
             li{
                 height: .45rem;
                 border-bottom: .01rem solid #e1e1e1;
@@ -53,7 +53,26 @@
         }
         #fenlei-swiper{
             @include flex();
-            background: red;
+            background: #fff;
+            ul{
+                width: 100%;
+                height: 1.1rem;
+                @include flexbox();
+                li{
+                    background: #fff;
+                    border: 0;
+                    @include flex();
+                    height: 1.1rem;
+                    width: .8rem;
+                   img{
+                       width: .8rem;
+                       height: .8rem;
+                   }
+                   p{
+                       line-height: .3rem;
+                   }
+                }
+            }
         }
     }
 }
