--- a/src/styles/usage/modules/find.scss
+++ b/src/styles/usage/modules/find.scss
@@ -1,5 +1,112 @@
-div{
-    widows: 100%;
-    height: 100%;
-    background: pink;
+#find-header{
+    line-height: .44rem;
+    text-align: center;
+    font-size: .2rem;
+    color: #fff;
 }
+#find-section{
+    nav{
+        height: .35rem;
+        width: 100%;
+        ul{
+            width: 100%;
+             @include flexbox();
+            li{
+                @include flex();
+                height: .35rem;
+                line-height: .35rem;
+                text-align: center;
+                font-size: .16rem;
+                &.active{
+                    color: #fe7575;
+                    border-bottom: .02rem solid #fe7575;
+                }
+            }
+        }
+    }
+    .swiper-slide{
+        .like-container{
+            height: .55rem;
+            width: 100%;
+           .title{
+               .title-right{
+                   text-align: right;
+               }
+               @include flexbox();
+               margin: 0 .1rem;
+               height: 100%;
+               background: 0;
+                div{
+                    @include flex();
+                    &:nth-child(1){
+                        text-align: left;
+                        @include flexbox();
+                        img{
+                            margin: .1rem 0;
+                            width: .35rem;
+                            height: .35rem;
+                            display: inline-block;
+                        }
+                        div{
+                            margin: 0 0 0 .1rem;
+                            @include flex();
+                            p{
+                                color: #077b92;
+                                font-size: .14rem;
+                                line-height: .3rem;
+                            }
+                            b{
+                                color: #898989;
+                                font-weight: 100;
+                            }
+                        }
+                    }
+                    &:nth-child(2){
+                        span{
+                            margin: .15rem 0;
+                            display: inline-block;
+                            width: .56rem;
+                            height: .26rem;
+                            border: .01rem solid #e46b58;
+                            box-sizing: border-box;
+                            font-size: .12rem;
+                            text-align: center;
+                            line-height: .26rem;
+                            border-radius: .03rem;
+                        }
+                    }
+                }
+           }
+           .img-box{
+                margin: 0 .1rem;
+                img{
+                    width: 100%;
+                }
+            }
+            .heart{
+                @include flexbox();
+                margin: 0 .1rem;
+                height: .43rem;
+                border-bottom: .01rem solid #333;
+                &>*{
+                    display: inline-block;
+                    text-align: center;
+                    line-height: .43rem;
+                    width: .44rem; 
+                    font-size: .18rem;
+                    font-weight: normal;
+                }
+                p{
+                    @include flex();
+                    font-size: .14rem;
+                    text-align: right;
+                    color: #666;
+                }
+            }
+        }
+    }
+}
+
+
+
+
