--- a/src/styles/usage/modules/home.scss
+++ b/src/styles/usage/modules/home.scss
@@ -1,4 +1,7 @@
 @import "/index.scss";
+.last-li{
+    height: 2.99rem !important;
+}
     header{
 //      position: absolute;
 //      z-index: 99;
@@ -34,7 +37,6 @@
         height: .35rem;
                 background: #f7f7f7;
 z-index: 9999;
-//background: red;
                 ul{
                     @include flexbox();
                     li{
@@ -87,6 +89,9 @@ z-index: 9999;
                 }
             }
             .container{
+                .main{
+                    height: 100%;
+                }
                 width: 100%;
                 ul{
                     width: 100%;
