--- a/src/styles/usage/core/common.scss
+++ b/src/styles/usage/core/common.scss
@@ -24,3 +24,11 @@ $base-color: #0dc441;
   font-family: yofont;
   src: url("/images/iconfont/iconfont4.woff") format("woff"), url("/images/iconfont/iconfont4.ttf") format("truetype");
 }
+@font-face {
+  font-family: yofont;
+  src: url("/images/iconfont/iconfont5.woff") format("woff"), url("/images/iconfont/iconfont5.ttf") format("truetype");
+}
+@font-face {
+  font-family: yofont;
+  src: url("/images/iconfont/iconfont6.woff") format("woff"), url("/images/iconfont/iconfont6.ttf") format("truetype");
+}
