--- a/src/styles/usage/modules/find.scss
+++ b/src/styles/usage/modules/find.scss
@@ -5,6 +5,7 @@
     color: #fff;
 }
 #find-section{
+    background: #fff;
     nav{
         height: .35rem;
         width: 100%;
@@ -25,8 +26,16 @@
         }
     }
     .swiper-slide{
+        .last-like{
+                margin-bottom: .49rem !important;
+            }
         .like-container{
-            height: .55rem;
+            margin: .1rem 0;
+            &>*{
+                margin: 0 .1rem;
+            }
+            
+//          height: 100%;
             width: 100%;
            .title{
                .title-right{
@@ -101,6 +110,52 @@
                     font-size: .14rem;
                     text-align: right;
                     color: #666;
+                }
+            }
+            .p-title{
+                margin: 0 .1rem;
+                height: .32rem;
+                line-height: .4rem;
+                font-size: .16rem;
+            }
+            .pro{
+                height: .5rem;
+                ul{
+                    background: #f7f7f7;
+                    height: .5rem;
+                    @include flexbox();
+                    li{
+                        height: .5rem;
+                        &:nth-child(1){
+                            width: .5rem;
+                            img{
+                                height: 100%;
+                                display: inline-block;
+                                width: .5rem;
+                            }
+                        }
+                        &:nth-child(2){
+                            @include flex();
+                            p{
+                                text-align: left;
+                            }
+                            b{
+                                text-align: left;
+                                color: red;
+                                font-weight: normal;
+                            }
+                        }
+                        &:nth-child(3){
+                            background: #dedede;
+                            width: .5rem;
+                            font-size: .32rem;
+                            text-align: center;
+                        }
+                        &.shopcar{
+                            color: #999;
+                            font-weight: normal;
+                        }
+                    }
                 }
             }
         }
